--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,5 +126,6 @@
     <string name="app_name_motto">Fridge - A Virtual Companion</string>
     <string name="donations_bitcoin_toast_copy">Bitcoin address has been copied to the clipboard!</string>
     <string name="donate">DONATE</string>
+    <string name="sync_please_wait">Please wait while the sync is complete.</string>
 
 </resources>
